# recpermissions

./: .gitignore  CODE_OF_CONDUCT.md  MANIFEST.in  PROCEDURE.txt  README.md  RELEASE_PROCEDURE.txt  pyproject.toml  setup.py
.github/workflows/: ci.yml
doc/: Doxyfile  index.dox
doc/ttyrec/: howto.py  recpermissions_howto_en  recpermissions_howto_es
locale/: es.po  es.po~  fr.po  recpermissions.pot
man/es/man1/: recpermissions.1
man/fr/man1/: recpermissions.1
man/man1/: recpermissions.1
recpermissions/: __init__.py  commons.py  core.py  i18n.py  poethepoet.py  types.py  version.py
recpermissions/locale/: es.po  fr.po  recpermissions.pot
recpermissions/locale/es/LC_MESSAGES/: recpermissions.mo
recpermissions/locale/fr/LC_MESSAGES/: recpermissions.mo
recpermissions/tests/: test_core.py
